# ms_cookie

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: Dockerfile  README.md  main.py  pyproject.toml
{{cookiecutter.project_name}}/core/: config.py
{{cookiecutter.project_name}}/db/: sessions.py
{{cookiecutter.project_name}}/modules/: authentication.py  token_jwt.py
