[tool.poetry]
name = {{cookiecutter.project_name}}
version = "0.1.0"
description = {{cookiecutter.project_description}}
author = {{cookiecutter.author}}

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
pydantic = "^1.10.2"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
PyJWT = "^2.6.0"
redis = "^4.5.4"
grpcio-tools = "^1.51.0"
grpcio = "^1.51.0"
sentry-sdk = "^1.30.0"
aiokafka = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^6.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
